--- a/Projekti/Projekti.html
+++ b/Projekti/Projekti.html
@@ -1,10 +1,65 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My First Webpage</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    <p>This is my first webpage.</p>
-  </body>
+ <head>
+     <meta charset="utf-8">
+
+     <title>Coffee House</title>
+     
+     <link href="stylesheet.css" rel="stylesheet">
+
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+ </head>
+
+ <body> 
+      <header>
+         <h1>
+             <picture>
+                 <img src="ch.png" alt="logo">
+                 <source media="(min-width: 480px)"
+                 srcset="ch1200.png 1200w,
+                 ch800.png 800w"
+                 sizes="80vw">
+             </picture>
+         Coffee House </h1>
+     </header>
+
+     <nav>
+         <h3>NAVIGATE TO:</h3>
+             <ul>
+                 <li><a href="#startShop"><span class="navi">Shop &#9733</span></a></li>
+                 <li><a href="#startService"><span class="navi">Service &#9733</span></a></li>
+                 <li><a href="#startContacts"><span class="navi">Contacts &#9733</span></a></li>
+             </ul>
+     </nav>
+
+     <header>
+         <h2 id="startShop">[Shop]</h2>
+         <p>Coffee House brings you what ever you want</p>
+     </header>
+
+     <header>
+         <h2 id="startService">[Service]</h2>
+         <p>Our service gives you what ever you want</p>
+     </header>
+
+     <header>
+         <h2 id="startContacts">[Contacts]</h2>
+         <p>We are open,<br>where and when ever you want</p><br><br><br>
+     </header>
+
+     <h4><a href="feedback.html">Feedback</a></h4>
+
+     <h4><a href="glossary.html">Glossary -page</a></h4>
+
+     <h4>Useful links:</h4>
+         <ul>
+             <li><a href="https://www.turku.fi/">Turku</a></li>
+             <li><a href="https://fi.wikipedia.org/wiki/Coffee_House">Wikipedia</a></li>
+         </ul>
+
+     <footer>
+         <img src="kahvipapu.svg" alt="beans"> <br> <a href="https://www.freepik.com/free-photo/background-roasted-fresh-brown-coffee-beans-perfect-cool-wallpaper_10185884.htm#query=coffee&position=4&from_view=search&track=sph">Image by wirestock</a> on Freepik 
+         width
+        </footer>
+ </body>
 </html>
