--- a/Projekti/Projekti.html
+++ b/Projekti/Projekti.html
@@ -3,7 +3,7 @@
  <head>
      <meta charset="utf-8">
 
-     <title>Coffee House</title>
+     <title>MyONE</title>
      
      <link href="stylesheet.css" rel="stylesheet">
 
@@ -14,13 +14,13 @@
       <header>
          <h1>
              <picture>
-                 <img src="ch.png" alt="logo">
+                 <img src="ch.pngg" alt="logo">
                  <source media="(min-width: 480px)"
                  srcset="ch1200.png 1200w,
                  ch800.png 800w"
                  sizes="80vw">
              </picture>
-         Coffee House </h1>
+         MyONE </h1>
      </header>
 
      <nav>
@@ -34,7 +34,7 @@
 
      <header>
          <h2 id="startShop">[Shop]</h2>
-         <p>Coffee House brings you what ever you want</p>
+         <p>MyONE brings you what ever you want</p>
      </header>
 
      <header>
@@ -54,11 +54,11 @@
      <h4>Useful links:</h4>
          <ul>
              <li><a href="https://www.turku.fi/">Turku</a></li>
-             <li><a href="https://fi.wikipedia.org/wiki/Coffee_House">Wikipedia</a></li>
+             <li><a href="https://fi.wikipedia.org/wiki/MyONE">Wikipedia</a></li>
          </ul>
 
      <footer>
-         <img src="kahvipapu.svg" alt="beans"> <br> <a href="https://www.freepik.com/free-photo/background-roasted-fresh-brown-coffee-beans-perfect-cool-wallpaper_10185884.htm#query=coffee&position=4&from_view=search&track=sph">Image by wirestock</a> on Freepik 
+         <img src="kahvipapu.svgg" alt="beans"> <br> <a href="https://www.freepik.com/free-photo/background-roasted-fresh-brown-coffee-beans-perfect-cool-wallpaper_10185884.htm#query=coffee&position=4&from_view=search&track=sph">Image by wirestock</a> on Freepik 
          width
         </footer>
  </body>
