--- a/Projekti/Projekti.html
+++ b/Projekti/Projekti.html
@@ -14,7 +14,7 @@
       <header>
          <h1>
              <picture>
-                 <img src="ch.pngg" alt="logo">
+                 <img src="" alt="">
                  <source media="(min-width: 480px)"
                  srcset="ch1200.png 1200w,
                  ch800.png 800w"
@@ -58,8 +58,7 @@
          </ul>
 
      <footer>
-         <img src="kahvipapu.svgg" alt="beans"> <br> <a href="https://www.freepik.com/free-photo/background-roasted-fresh-brown-coffee-beans-perfect-cool-wallpaper_10185884.htm#query=coffee&position=4&from_view=search&track=sph">Image by wirestock</a> on Freepik 
-         width
+         <img src="" alt=""> <br> <a href=""></a>  
         </footer>
  </body>
 </html>
