--- a/Projekti/Projekti.html
+++ b/Projekti/Projekti.html
@@ -20,7 +20,8 @@
                  ch800.png 800w"
                  sizes="80vw">
              </picture>
-         MyONE </h1>
+         MyONE
+         </h1>
      </header>
 
      <nav>
