--- a/Projekti/Projekti.html
+++ b/Projekti/Projekti.html
@@ -16,22 +16,22 @@
              <picture>
                  <img src="logo.jpg" alt="">
                  <source media="(min-width: 480px)"
-                 srcset="tausta.jpg 1200w,
-                 tausta.jpg 800w"
-                 sizes="80vw">
+                 srcset="logo.jpg 1200w,
+                 logo.jpg 800w">
              </picture>
-         Tervetuloa MyONE </h1>
+             <a href="Projekti.html">Tervetuloa MyONE</a> </h1>
      </header>
 
      <nav>
          <h4><a>Siirry suoraan:</a></h4>
              <ul>
-                 <li><a href="#startMikäonMyONE"><span class="navi">Mikä on MyONE? &#9733</span></a></li>
-                 <li><a href="#startMiksiMyONE"><span class="navi">Miksi MyONE? &#9733</span></a></li>
-                 <li><a href="#startKenelle"><span class="navi">Kenelle? &#9733</span></a></li>
-                 <li><a href="#startHinnasto"><span class="navi">Hinnasto &#9733</span></a></li>
-                 <li><a href="#startVerkkokauppa"><span class="navi">Verkkokauppa &#9733</span></a></li>
-                 <li><a href="#startYhteystiedot"><span class="navi">Yhteystiedot &#9733</span></a></li>
+                <li><a href="Projekti.html">Etusivu &#9733</a></li>
+                 <li><a href="mikä.html">Mikä on MyONE? &#9733</a></li>
+                 <li><a href="miksi.html">Miksi MyONE? &#9733</a></li>
+                 <li><a href="kenelle.html">Kenelle MyONE? &#9733</a></li>
+                 <li><a href="hinnasto.html">Hinnasto &#9733</a></li>
+                 <li><a href="verkkokauppa.html">Verkkokauppa &#9733</a></li>
+                 <li><a href="yhteystiedot.html">Yhteystiedot &#9733</a></li>
              </ul>
      </nav>
 
@@ -76,16 +76,6 @@
      </header>
 
 <br></br>
-
-     <h4><a href="feedback.html">Palaute</a></h4>
-
-     <h4><a href="glossary.html">Hakemisto</a></h4>
-
-     <h4><a>Linkkejä:</a></h4>
-         <ul>
-             <li><a href="https://www.turku.fi/">Turku</a></li>
-             <li><a href="https://fi.wikipedia.org/wiki/MyONE">Wikipedia</a></li>
-         </ul>
 
      <footer>
          <img src="" alt=""> <br> <a href=""></a>  
