--- a/Projekti/Projekti.html
+++ b/Projekti/Projekti.html
@@ -19,20 +19,20 @@
                  srcset="logo.jpg 1200w,
                  logo.jpg 800w">
              </picture>
-             <a href="Projekti.html">Tervetuloa MyONE</a> </h1>
+             Tervetuloa MyONE
+             </h1>     
      </header>
 
      <nav>
-         <h4><a>Siirry suoraan:</a></h4>
-             <ul>
-                <li><a href="Projekti.html">Etusivu &#9733</a></li>
-                 <li><a href="mikä.html">Mikä on MyONE? &#9733</a></li>
-                 <li><a href="miksi.html">Miksi MyONE? &#9733</a></li>
-                 <li><a href="kenelle.html">Kenelle MyONE? &#9733</a></li>
-                 <li><a href="hinnasto.html">Hinnasto &#9733</a></li>
-                 <li><a href="verkkokauppa.html">Verkkokauppa &#9733</a></li>
-                 <li><a href="yhteystiedot.html">Yhteystiedot &#9733</a></li>
-             </ul>
+        <ul>
+            <li><a href="Projekti.html">Etusivu &#9733</a></li>
+            <li><a href="mikä.html">Mikä on MyONE? &#9733</a></li>
+            <li><a href="miksi.html">Miksi MyONE? &#9733</a></li>
+            <li><a href="kenelle.html">Kenelle MyONE? &#9733</a></li>
+            <li><a href="hinnasto.html">Hinnasto &#9733</a></li>
+            <li><a href="verkkokauppa.html">Verkkokauppa &#9733</a></li>
+            <li><a href="yhteystiedot.html">Yhteystiedot &#9733</a></li>
+        </ul>
      </nav>
 
      <header>
