--- a/Projekti/palaute.html
+++ b/Projekti/palaute.html
@@ -4,7 +4,7 @@
 
      <meta charset="utf-8" >
 
-     <title>MyONE Feedback</title>
+     <title>MyONE Palaute</title>
   
      <style type="text/css">
          ol, ul { 
