--- a/Projekti/palaute.html
+++ b/Projekti/palaute.html
@@ -16,7 +16,7 @@
 
     <body>
      <form action="http://www.myone.fi" method="POST">
-         <h1>MyONE Feedback</h1>
+         <h1>MyONE Palaute</h1>
 
          <fieldset>
              <legend><b>Anna palautetta voittaaksesi ilmaisen kokeilujakson</b></legend>
