--- a/Projekti/palaute.html
+++ b/Projekti/palaute.html
@@ -4,7 +4,7 @@
 
      <meta charset="utf-8" >
 
-     <title>MyONE Palaute</title>
+     <title>MyONE Feedback</title>
   
      <style type="text/css">
          ol, ul { 
@@ -16,7 +16,7 @@
 
     <body>
      <form action="http://www.myone.fi" method="POST">
-         <h1>MyONE Palaute</h1>
+         <h1>MyONE Feedback</h1>
 
          <fieldset>
              <legend><b>Anna palautetta voittaaksesi ilmaisen kokeilujakson</b></legend>
@@ -59,8 +59,8 @@
              <input type="range" name="satisfaction" min="0" max="100" step="0">
          </fieldset>
 
-         <p><input type="submit" value="Thanks">
-         <input type="reset" value="Reset"></p>
+         <p><input type="submit" value="Kiitos">
+         <input type="reset" value="Tyhjennä"></p>
      </form>
   </body>
 </html>
