--- a/Projekti/kenelle.html
+++ b/Projekti/kenelle.html
@@ -21,20 +21,21 @@
                  srcset="logo.jpg 1200w,
                  logo.jpg 800w">
              </picture>
+             MyONE -sovellus
              </h1>
      </header>
 
      <nav>
-         <h4><a>Siirry suoraan:</a></h4>
-             <ul>
-                 <li><a href="Projekti.html">Etusivu &#9733</a></li>
-                 <li><a href="mikä.html">Mikä on MyONE? &#9733</a></li>
-                 <li><a href="miksi.html">Miksi MyONE? &#9733</a></li>
-                 <li><a href="kenelle.html">Kenelle MyONE? &#9733</a></li>
-                 <li><a href="hinnasto.html">Hinnasto &#9733</a></li>
-                 <li><a href="verkkokauppa.html">Verkkokauppa &#9733</a></li>
-                 <li><a href="yhteystiedot.html">Yhteystiedot &#9733</a></li>
-             </ul>
+         <ul>
+             <li><a href="Projekti.html">Etusivu &#9733</a></li>
+             <li><a href="mikä.html">Mikä on MyONE? &#9733</a></li>
+             <li><a href="miksi.html">Miksi MyONE? &#9733</a></li>
+             <li><a href="kenelle.html">Kenelle MyONE? &#9733</a></li>
+             <li><a href="hinnasto.html">Hinnasto &#9733</a></li>
+             <li><a href="verkkokauppa.html">Verkkokauppa &#9733</a></li>
+             <li><a href="yhteystiedot.html">Yhteystiedot &#9733</a></li>
+             <li><a href="Project.html">In English &#9733</a></li>
+         </ul>
      </nav>
 
      <header>
@@ -42,10 +43,14 @@
          <p>Olit sitten kuka tahansa MyOne sopii sinulle, kuka kaipaat vastauksia arjen kysymyksiin, haasteisiin, mieltä painaviin asioihin tai vain juttukaveria. Se on helppokäyttöinen, jonka takia se on helppo ottaa käyttöön myös vähemmän älylaitteita käyttävälle henkilölle. </p>
      </header>
 
-<br></br>
+     <h4><a href="palaute.html">Asiakaspalaute</a></h4>
+     <h4><a href="yhteystiedot.html">Ota yhteyttä </a></h4>
+
+
+     <br></br>
 
      <footer>
          <img src="" alt=""> <br> <a href=""></a>  
-        </footer>
+     </footer>
  </body>
 </html>
