--- a/Projekti/miksi.html
+++ b/Projekti/miksi.html
@@ -21,11 +21,11 @@
                  srcset="logo.jpg 1200w,
                  logo.jpg 800w">
              </picture>
+             MyONE -sovellus
              </h1>
      </header>
 
      <nav>
-         <h4><a>Siirry suoraan:</a></h4>
              <ul>
                  <li><a href="Projekti.html">Etusivu &#9733</a></li>
                  <li><a href="mikä.html">Mikä on MyONE? &#9733</a></li>
@@ -34,6 +34,7 @@
                  <li><a href="hinnasto.html">Hinnasto &#9733</a></li>
                  <li><a href="verkkokauppa.html">Verkkokauppa &#9733</a></li>
                  <li><a href="yhteystiedot.html">Yhteystiedot &#9733</a></li>
+                 <li><a href="Project.html">In English &#9733</a></li>
              </ul>
      </nav>
      
@@ -44,7 +45,11 @@
         <p> Sovelluksen tuki tavoitteiden saavuttamiseen ja saavutusten tunnistamiseen voi lisätä käyttäjän itsetuntoa ja luottamusta omiin kykyihinsä. Sovelluksen tarjoama motivaatio ja rohkaisu voivat antaa käyttäjälle tarvittavan boostin jaksaa eteenpäin ja saavuttaa tavoitteitaan.</p>
      </header>
 
-<br></br>
+     <h4><a href="palaute.html">Asiakaspalaute</a></h4>
+     <h4><a href="yhteystiedot.html">Ota yhteyttä </a></h4>
+
+
+     <br></br>
 
      <footer>
          <img src="" alt=""> <br> <a href=""></a>  
