--- a/Projekti/projektibeta.html
+++ b/Projekti/projektibeta.html
@@ -5,7 +5,7 @@
 
      <title>Tervetuloa MyONE sivustolle!</title>
      
-     <link href="style.css" rel="stylesheet">
+     <link href="stylebeta.css" rel="stylesheet">
 
      <meta name="viewport" content="width=device-width, initial-scale=1">
  </head>
@@ -14,26 +14,25 @@
       <header>
          <h1>
              <picture>
-                 <img src="nimetön.jpg" alt="">
+                 <img src="logo.jpg" alt="">
                  <source media="(min-width: 480px)"
-                 srcset="logo.jpg 1200w,
-                 logo.jpg 800w">
+                 srcset="tausta.jpg 1200w,
+                 tausta.jpg 800w"
+                 sizes="80vw">
              </picture>
-             Tervetuloa MyONE
-             </h1>     
+         Tervetuloa MyONE </h1>
      </header>
 
      <nav>
-        <ul>
-            <li><a href="Projekti.html">Etusivu &#9733</a></li>
-            <li><a href="mikä.html">Mikä on MyONE? &#9733</a></li>
-            <li><a href="miksi.html">Miksi MyONE? &#9733</a></li>
-            <li><a href="kenelle.html">Kenelle MyONE? &#9733</a></li>
-            <li><a href="hinnasto.html">Hinnasto &#9733</a></li>
-            <li><a href="verkkokauppa.html">Verkkokauppa &#9733</a></li>
-            <li><a href="yhteystiedot.html">Yhteystiedot &#9733</a></li>
-            <li><a href="Project.html">In English &#9733</a></li>
-        </ul>
+         <h4><a>Siirry suoraan:</a></h4>
+             <ul>
+                 <li><a href="#startMikäonMyONE"><span class="navi">Mikä on MyONE? &#9733</span></a></li>
+                 <li><a href="#startMiksiMyONE"><span class="navi">Miksi MyONE? &#9733</span></a></li>
+                 <li><a href="#startKenelle"><span class="navi">Kenelle? &#9733</span></a></li>
+                 <li><a href="#startHinnasto"><span class="navi">Hinnasto &#9733</span></a></li>
+                 <li><a href="#startVerkkokauppa"><span class="navi">Verkkokauppa &#9733</span></a></li>
+                 <li><a href="#startYhteystiedot"><span class="navi">Yhteystiedot &#9733</span></a></li>
+             </ul>
      </nav>
 
      <header>
@@ -76,13 +75,20 @@
         <p>ICT-CITY, Turku Finland</p>
      </header>
 
-     <h4><a href="palaute.html">Asiakaspalaute</a></h4>
-     <h4><a href="yhteystiedot.html">Ota yhteyttä </a></h4>
+<br></br>
 
-     <br></br>
+     <h4><a href="feedback.html">Palaute</a></h4>
+
+     <h4><a href="glossary.html">Hakemisto</a></h4>
+
+     <h4><a>Linkkejä:</a></h4>
+         <ul>
+             <li><a href="https://www.turku.fi/">Turku</a></li>
+             <li><a href="https://fi.wikipedia.org/wiki/MyONE">Wikipedia</a></li>
+         </ul>
 
      <footer>
          <img src="" alt=""> <br> <a href=""></a>  
-      </footer>
+        </footer>
  </body>
 </html>
