--- a/Projekti/verkkokauppa.html
+++ b/Projekti/verkkokauppa.html
@@ -20,20 +20,21 @@
                  logo.jpg 800w"
                  sizes="80vw">
              </picture>
+             MyONE Verkkokauppa
              </h1>
      </header>
 
      <nav>
-         <h4><a>Siirry suoraan:</a></h4>
-             <ul>
-                 <li><a href="Projekti.html">Etusivu &#9733</a></li>
-                 <li><a href="mikä.html">Mikä on MyONE? &#9733</a></li>
-                 <li><a href="miksi.html">Miksi MyONE? &#9733</a></li>
-                 <li><a href="kenelle.html">Kenelle MyONE? &#9733</a></li>
-                 <li><a href="hinnasto.html">Hinnasto &#9733</a></li>
-                 <li><a href="verkkokauppa.html">Verkkokauppa &#9733</a></li>
-                 <li><a href="yhteystiedot.html">Yhteystiedot &#9733</a></li>
-             </ul>
+         <ul>
+             <li><a href="Projekti.html">Etusivu &#9733</a></li>
+             <li><a href="mikä.html">Mikä on MyONE? &#9733</a></li>
+             <li><a href="miksi.html">Miksi MyONE? &#9733</a></li>
+             <li><a href="kenelle.html">Kenelle MyONE? &#9733</a></li>
+             <li><a href="hinnasto.html">Hinnasto &#9733</a></li>
+             <li><a href="verkkokauppa.html">Verkkokauppa &#9733</a></li>
+             <li><a href="yhteystiedot.html">Yhteystiedot &#9733</a></li>
+             <li><a href="Project.html">In English &#9733</a></li>
+         </ul>
      </nav>
 
      <header>
@@ -43,7 +44,11 @@
         <p>Katso juuri sinulle tai yrityksellesi sopiva paketti oheisesta linkistä: MyOne.fi/tilaa </p>
      </header>
 
-<br></br>
+     <h4><a href="palaute.html">Asiakaspalaute</a></h4>
+     <h4><a href="yhteystiedot.html">Ota yhteyttä </a></h4>
+
+
+     <br></br>
 
      <footer>
          <img src="" alt=""> <br> <a href=""></a>  
