--- a/Projekti/Projekti.html
+++ b/Projekti/Projekti.html
@@ -14,7 +14,7 @@
       <header>
          <h1>
              <picture>
-                 <img src="nimetön.jpg" alt="">
+                 <img src="logo.jpg" alt="">
                  <source media="(min-width: 480px)"
                  srcset="logo.jpg 1200w,
                  logo.jpg 800w">
